# watcher-cli

./: .gitignore  README.md  pyproject.toml  sample.yaml
watcher/: config_dto.py  handler.py  main.py  matcher.py  watcher.py
